--- a/carnet_edit.html
+++ b/carnet_edit.html
@@ -16,24 +16,27 @@
 </ol>
 
 <h1>Modifier un carnet</h1>
+    <pre>
+        {{ carnet | json }}
+    </pre>
 
 <form class="form-horizontal" role="form">
     <div class="form-group">
         <label for="inputTitre" class="col-sm-2 control-label">Titre</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTitre" placeholder="Titre">
+            <input type="text" class="form-control" id="inputTitre" placeholder="Titre" ng-model="carnet.titre">
         </div>
     </div>
     <div class="form-group">
         <label for="inputTexte" class="col-sm-2 control-label">Texte</label>
         <div class="col-sm-10">
-            <textarea class="form-control" id="inputTexte"></textarea>
+            <textarea class="form-control" id="inputTexte" ng-model="carnet.description"></textarea>
         </div>
     </div>
     
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary btn-lg">Enregistrer</button>
+            <button type="submit" class="btn btn-primary btn-lg" ng-click="updateCarnet(carnet)">Enregistrer</button>
         </div>
     </div>
 </form>
