--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Carnets de notes</title>
+    <title>Carnet, a new view of Notebook</title>
      
-    <link rel="stylesheet" type="text/css" href="ressources/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="ressources/bootstrap/css/bootstrap-theme.min.css" />
-    <link rel="stylesheet" type="text/css" href="ressources/projet.css" />
+    <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" type="text/css" href="styles/project.css" />
 </head>
 <body>
     <div class="container-narrow">
@@ -23,11 +23,11 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="ressources/jquery/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="ressources/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="libs/jquery/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.min.js"></script>
-    <script type="text/javascript" src="ressources/services.js"></script>
-    <script type="text/javascript" src="ressources/app.js"></script>
+    <script type="text/javascript" src="scripts/services.js"></script>
+    <script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
