Creation of notebook directive

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.min.js"></script>
-    <script type="text/javascript" src="scripts/services.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/directives/notebook.js"></script>
+    <script type="text/javascript" src="scripts/services.js"></script>
 </body>
 </html>
