Add route change error

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="carnetApp">
+  <body ng-app="carnetApp" ng-controller="RootCtrl" >
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -72,6 +72,7 @@
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/services/userService.js"></script>
         <script src="scripts/directives/notebook.js"></script>
+        <script src="scripts/controllers/root.js"></script>
         <!-- endbuild -->
 </body>
 </html>
