Fix support for backend server
Added some fixes for backend server + configuration of the api end point from the constants file.

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/services/userService.js"></script>
         <script src="scripts/directives/notebook.js"></script>
         <script src="scripts/controllers/root.js"></script>
+        <script src="scripts/services/constants.js"></script>
         <!-- endbuild -->
 </body>
 </html>
