--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+      <base href="/">
   </head>
   <body ng-app="carnetApp" ng-controller="RootCtrl" >
     <!--[if lt IE 7]>
