--- a/app/scripts/directives/notebook-template.html
+++ b/app/scripts/directives/notebook-template.html
@@ -1,3 +1,4 @@
+<div  ng-show="msgNotification" class="alert" ng-class="{'alert-success': ok, 'alert-danger': !ok}">{{msgNotification}}</div>
 <form class="form-horizontal" role="form">
     <div class="form-group">
         <label for="inputTitre" class="col-sm-2 control-label">Titre</label>
@@ -15,7 +16,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary btn-lg" ng-click="update({notebook:notebook})">Save</button>
+            <button type="submit" class="btn btn-primary btn-lg" ng-click="update(notebook)">Save</button>
         </div>
     </div>
 </form>
